fix: add div wrap to fix overlapping canvas
- It seems that the position of setting widths of each canvas,
  makes a difference.
- Add border-box to all elements in style

--- a/apps/nnwml/self-driving-car/src/app/app.element.scss
+++ b/apps/nnwml/self-driving-car/src/app/app.element.scss
@@ -1,15 +1,29 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+
+  // border: 1px solid violet;
+}
+
 body {
   margin: 0;
   background: darkgray;
-  overflow: hidden;
+  overflow-x: hidden;
   text-align: center;
 }
 
-#networkCanvas {
-  background: black;
+.canvas__wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-inline: auto;
 }
 
 #carCanvas {
   background: lightgray;
 }
 
+#networkCanvas {
+  background: black;
+}
